deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---

apiVersion: v1
kind: Service
metadata:
 name: code-server
 namespace: code-server
spec:
 ports:
 - port: 8443
   name: https
   protocol: TCP
 selector:
   app: code-server
 type: ClusterIP
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: code
  namespace: code-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: code.kubeplatform.ch.innoq.io
    http:
      paths:
      - path: /
        backend:
          serviceName: code-server
          servicePort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: docker:dind
        name: docker-daemon
        imagePullPolicy: Always
        securityContext:
          privileged: true
      - image: quay.io/fakod/dev-env-server
        args: ["--allow-http", "--password=changeme"]
        imagePullPolicy: Always
        name: code-servery
        ports:
        - containerPort: 8443
          name: http
        volumeMounts:
        - name: code-server-storage
          mountPath: /root/project
      volumes:
      - name: code-server-storage
        persistentVolumeClaim:
          claimName: code-store
